--- a/kubernetes/istio-lab/envoy_filter.yaml
+++ b/kubernetes/istio-lab/envoy_filter.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: networking.istio.io/v1alpha3
 kind: EnvoyFilter
 metadata:
@@ -25,7 +26,7 @@ spec:
             "@type": "type.googleapis.com/envoy.config.filter.http.jwt_authn.v2alpha.JwtAuthentication"
             providers:
               authority_jwks:
-                issuer: "authority.authority.svc.cluster.local"
+                issuer: "authority"
                 remote_jwks:
                   http_uri:
                     uri: "http://authority.authority.svc.cluster.local:8080/jwks"
@@ -35,7 +36,7 @@ spec:
                 forward: true
                 payload_in_metadata: "jwt_authority"
               authority2_jwks:
-                issuer: "authority.authority.svc.cluster.local"
+                issuer: "authority-2"
                 remote_jwks:
                   http_uri:
                     uri: "http://authority-2.authority.svc.cluster.local:8080/jwks"
@@ -52,4 +53,61 @@ spec:
                     requirements:
                       - provider_name: authority_jwks
                       - provider_name: authority2_jwks
-                      # - allow_missing_or_failed: {}
+                      - allow_missing_or_failed: {}
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: EnvoyFilter
+metadata:
+  name: lua-filter
+  namespace: istio-system
+spec:
+  workloadSelector:
+    labels:
+      authority-jwt: enabled
+  configPatches:
+    - applyTo: HTTP_FILTER
+      match:
+        context: SIDECAR_OUTBOUND
+        listener:
+          filterChain:
+            filter:
+              name: "envoy.http_connection_manager"
+              subFilter:
+                name: "envoy.filters.http.jwt_authn"
+      patch:
+        operation: INSERT_AFTER
+        value:
+          name: envoy.lua
+          typed_config:
+            "@type": "type.googleapis.com/envoy.config.filter.http.lua.v2.Lua"
+            inlineCode: |
+              function envoy_on_request(request)
+                  local ok, message = pcall(handle_request, request)
+                  if not ok then
+                      request:logWarn(message)
+                  end
+              end
+
+              function handle_request(request)
+                  local meta = request:streamInfo():dynamicMetadata()
+                  if not meta then
+                      return
+                  end
+
+                  local jwt_filter_meta = meta:get("envoy.filters.http.jwt_authn")
+                  if not jwt_filter_meta then
+                      return
+                  end
+
+                  local claims = jwt_filter_meta["jwt_authority"]
+                  if not claims then
+                      return
+                  end
+
+                  local iss = claims["iss"]
+                  if not iss then
+                      return
+                  end
+
+                  request:headers():add("ISS", iss)
+              end
