--- a/go/grpc/grpcserver2/Dockerfile
+++ b/go/grpc/grpcserver2/Dockerfile
@@ -1,15 +1,15 @@
-FROM golang:1.14.7-buster
+FROM golang:1.15.2-buster
 
 ENV GO111MODULE=on
 ENV GOOS=linux
 ENV GOARCH=amd64
-WORKDIR /go/src/github.com/110y/lab
+WORKDIR /go/src/github.com/110y/lab/go/grpc/grpcserver2
 
 COPY go.mod go.mod
 COPY go.sum go.sum
-RUN GOPROXY='direct' go mod download
+RUN go mod tidy
 
 COPY . .
-RUN go build -o /usr/bin/grpcserver2 ./go/grpc/grpcserver2
+RUN go build -o /usr/bin/grpcserver2 .
 
 CMD ["/usr/bin/grpcserver2"]
